// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders with as correctly 1`] = `
"<div data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Badge</span>
  <!--v-if-->
</div>"
`;

exports[`Badge > renders with avatar and leadingIcon correctly 1`] = `
"<span data-slot="base" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`Badge > renders with avatar and trailingIcon correctly 1`] = `
"<span data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
<!--v-if--><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>"
`;

exports[`Badge > renders with avatar correctly 1`] = `
"<span data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`Badge > renders with class correctly 1`] = `
"<span data-slot="base" class="rounded-full font-bold"><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with default slot correctly 1`] = `"<span data-slot="base" class=""><!--v-if-->Default slot<!--v-if--></span>"`;

exports[`Badge > renders with icon correctly 1`] = `
"<span data-slot="base" class=""><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`Badge > renders with label correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with leading and icon correctly 1`] = `
"<span data-slot="base" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`Badge > renders with leading slot correctly 1`] = `"<span data-slot="base" class="">Leading slot<!--v-if--><!--v-if--></span>"`;

exports[`Badge > renders with leadingIcon correctly 1`] = `
"<span data-slot="base" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`Badge > renders with neutral variant outline correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with neutral variant soft correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with neutral variant solid correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with neutral variant subtle correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary variant outline correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary variant soft correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary variant solid correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary variant subtle correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size lg correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size md correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size sm correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size xl correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size xs correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with square correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with trailing and icon correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if--><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>"`;

exports[`Badge > renders with trailing slot correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if-->Trailing slot</span>"`;

exports[`Badge > renders with trailingIcon correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if--><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>"`;

exports[`Badge > renders with ui correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="font-bold">Badge</span>
<!--v-if--></span>"
`;
